syntax = "proto3";

package apidocs;

import "google/api/annotations.proto";

option go_package = "../apidocs";

service CustomerService {
    //用户注册
    rpc Register (RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/api/v1/user/register"
            body: "*"
        };
    }

    //用户登录
    rpc Login (LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/api/v1/user/login"
            body: "*"
        };
    }
}

service CheckMobileService {
    //检查手机号码是否已注册
    rpc CheckMobile (CheckMobileRequest) returns (CheckMobileRequest) {
        option (google.api.http) = {
            post: "/api/v1/user/checkMobile"
            body: "*"
        };
    }
}

message RegisterRequest {
    string mobile = 1;
    string passwd = 2;
    string smscode = 3;
}

message RegisterResponse {
}


message LoginRequest {
    string mobile = 1;
    string passwd = 2;
}

message LoginResponse {
    string token = 1;
}

message CheckMobileRequest {
    string mobile = 1;
}

message CheckMobileResponse {
}

