syntax = "proto3";

package apidocs;

import "google/api/annotations.proto";

option go_package = "../apidocs";

message SendSmsRequest {
    string mobile = 1;
}

message SendSmsResponse {
}

service SmsCodeService {
    // 发送短信验证码
    rpc SendSmsCode (SendSmsRequest) returns (SendSmsResponse) {
        option (google.api.http) = {
            post: "/api/v1/smscode"
            body: "*"
        };
    }
}

